--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyC0k7XMp28C2eYj3W3aChPt7aLqGk25OA8",
+      authDomain: "fichinharpg-10330.firebaseapp.com",
+      projectId: "fichinharpg-10330",
+      storageBucket: "fichinharpg-10330.appspot.com",
+      messagingSenderId: "851672539138",
+      appId: "1:851672539138:web:9ab19eb85cfa3a027e871b"
     };
 
     // Initialize Firebase
